--- a/flask_APP/requirements.txt
+++ b/flask_APP/requirements.txt
@@ -1,5 +1,4 @@
 Flask==0.12.2
-Flask-Cors==3.0.3
 jsonschema==2.6.0
 numpy==1.13.3
 numpydoc==0.7.0
@@ -8,3 +7,4 @@ requests==2.18.4
 scikit-learn==0.19.1
 scipy==1.0.0
 Python==2.7.14
+conda==4.5.4
