--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask==0.12.2
-jsonschema==2.6.0
-numpy==1.13.3
-numpydoc==0.7.0
-pandas==0.20.3
-requests==2.18.4
-scikit-learn==0.19.1
-scipy==1.0.0
-gunicorn==19.6.0
-flask-cors==3.0.6
+Flask>=0.12.2
+jsonschema>=2.6.0
+numpy>=1.13.3
+numpydoc>=0.7.0
+pandas>=0.20.3
+requests>=2.18.4
+scipy>=1.0.0
+scikit-learn>=0.19.1
+gunicorn>=19.6.0
+flask-cors>=3.0.6
