--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
-{
-    "python.pythonPath": "C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
-}
+{    
+    "python.pythonPath": "C:\\Users\\giant\\AppData\\Local\\Programs\\Python\\Python37-32\\python",
+    "python.linting.enabled": true,
+    "git.enableSmartCommit": true,
+    "git.autofetch": true,
+    "gitlens.advanced.messages": {
+        "suppressShowKeyBindingsNotice": true
+    },
+    "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
+  }
