--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,9 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
             "name": "Cost_prediction_api",
-            "type": "python",
+            "type": "pythonExperimental",
             "request": "launch",
             "module": "flask",
             "env": {
@@ -15,10 +12,10 @@
             "args": [
                 "run",
                 "--no-debugger",
-                "--no-reload",
                 "--host=0.0.0.0",
                 "--port=8080",
-            ]
+            ],
+            "jinja": true
         },
     ]
 }
