Changed api to take any area and height, with any unit Updated tests to create test data as a fixture before test runs Moved volume calculation into own class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,10 @@
         "**/.git": false
     },
 
+    "editor.tabSize": 4,
+    "editor.insertSpaces": true,
+    "editor.detectIndentation": false,
+
     "python.linting.enabled": true,
     "python.unitTest.pyTestEnabled": true,
     "python.unitTest.pyTestArgs": [
@@ -16,4 +20,5 @@
     ],
     "python.unitTest.unittestEnabled": false,
     "python.unitTest.nosetestsEnabled": false,
+    "python.pythonPath": "C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python37\\python.exe",
   }
